# frux-chat

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  heroku-Dockerfile  heroku.yml  main.py  pyproject.toml
docker-compose/: api-entrypoint.sh  docker-compose.yaml
frux_chat/: api.py  main.py  notifications.py
frux_chat/namespaces/: __init__.py
frux_chat/namespaces/chat/: models.py  namespace.py
frux_chat/namespaces/default/: namespace.py
frux_chat/namespaces/subscription/: models.py  namespace.py
frux_chat/namespaces/user/: models.py  namespace.py
frux_chat/resources/: notification.py  user.py
frux_chat/services/: authorization.py  database.py  notifications.py
heroku/: heroku-entrypoint.sh
