[tool.poetry]
name = "frux-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
Flask-RESTful = "^0.3.9"
exponent-server-sdk = "^2.0.0"
gunicorn = "^20.1.0"
flask-restful-swagger = "^0.20.2"
pymongo = {extras = ["srv"], version = "^3.12.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
