[tool.poetry]
name = "frux-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
exponent-server-sdk = "^2.0.0"
gunicorn = "^20.1.0"
pymongo = {extras = ["srv"], version = "^3.12.0"}
flask-restx = "^0.5.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pylint = "^2.8.2"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "19.10b0"
bandit = "^1.7.0"
bump2version = "^1.0.1"
isort = "^5.6.4"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
